gatekeeper/templates/constraints/deny-hostpath.yaml
apiVersion: constraints.gatekeeper.sh/v1
kind: K8sDenyHostPath
metadata:
  name: deny-hostpath
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
